apps/kiwix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiwix
  namespace: kiwix
spec:
  selector:
    app.kubernetes.io/name: kiwix
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
